default color changed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 
 </head>
 <body>
@@ -194,7 +195,7 @@
     <span style="background:linear-gradient(#999, #111)"></span>
     
 </div>
-<!-- type.js cdn link  -->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
 
 <script>
@@ -213,5 +214,6 @@
 
 </script>
 
+<!-- type.js cdn link  -->
 </body>
 </html>
