--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="share">
             <a href="#" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-github"></a>
             <a href="#" class="fab fa-instagram"></a>
             <a href="#" class="fab fa-pinterest"></a>
             <a href="#" class="fab fa-linkedin"></a>
@@ -84,11 +84,7 @@
 
         <div class="skills">
             <div class="progress">
-                <h3>html <span>95%</span></h3>
-                <div class="bar"><span></span></div>
-            </div>
-            <div class="progress">
-                <h3>css <span>85%</span></h3>
+                <h3>html and css <span>95%</span></h3>
                 <div class="bar"><span></span></div>
             </div>
             <div class="progress">
@@ -192,7 +188,6 @@
     <span style="background: linear-gradient(lightgreen, crimson);"></span>
     <span style="background:linear-gradient( #408EC6, #7A2048, #1E2761)"></span>
     <span style="background:linear-gradient(coral, blueviolet)"></span>
-    <span style="background:linear-gradient(#999, #111)"></span>
     
 </div>
 
