--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/my_img.png" alt="" width="100px" height="100px">
+                    <img src="img/girl6.jpg" alt="" width="100px" height="100px">
                 </div>
             </div>
             <div class="right-header">
@@ -364,7 +364,7 @@
                                     Email
                                 </div>
                                 <p>
-                                    : isha09@gmail.com
+                                    : ishahitang09@gmail.com
                                 </p>
                             </div>
 
@@ -422,8 +422,9 @@
                 </div>
             </div>
         </section>
+       
     </main>
-
+    
     <div class="controls">
         <div class="control active-btn" data-id="home" >
             <i class="fas fa-home"></i>
@@ -445,5 +446,8 @@
         <i class="fas fa-adjust"></i>
     </div>
     <script src="app.js"></script>
+    <div class="footer">
+        <p class="foot-1">copyright © 2022 created and designed by <span> &nbsp Isha Hitang</span></p>
+    </div>
 </body>
 </html>
