responsive code written

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         <h4>contact me here
                             <p><i class="fas fa-smile" aria-hidden="true" style="font-size: 30px; color: var(--color-white);"></i></p>
                         </h4>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat illo impedit ipsam eaque quos </p>
+                        <p>contact me here for sharing and collaborating project ideas...</p>
                         <div class="contact-info">
                             <div class="contacts-item">
                                 <div class="icon">
