--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<div class="left-about">
 						<h4>Information about me</h4>
 						<p>
-							Hi, It&#39;s me Isha Hitang. I am a web developer and a creative
+							Hi, It&#39;s me Isha Hitang. I am a web developer and an ingenious
 							engineering student who loves to explore and create new things
 							related to the field. At present, i am probing in the field of
 							data science. Currently inspecting my actual happiness in the
