--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							Hi, It&#39;s me Isha Hitang. I am a web developer and an ingenious
 							engineering student who loves to explore and create new things
 							related to the field. At present, i am probing in the field of
-							data science. Currently inspecting my actual happiness in the
+							Machine Learning. Currently inspecting my actual happiness in the
 							field of software. I believe that finding your true happiness will
 							reach you to the victory of your givings, No matter how critical
 							the situation will be...
