--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<h1 class="name">Hi, It's me <span>Isha Hitang.</span></h1>
 					<p>
 						A Software Engineering Student and a front-end web developer. Also
-						interested in data science.
+						interested in Machine Learning.
 					</p>
 					<div class="btn-con">
 						<a href="#" class="main-btn">
