--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 							<i class="fas fa-briefcase"></i>
 						</div>
 						<p class="timeline-duration">2075 - 2077</p>
-						<h5>Tilottama H.S.S <span> - high school diploma</span></h5>
+						<h5>Tilottama H.S.S <span> - Intermediate Level(10 + 2)</span></h5>
 						<p>
 							At Tilottama Higher Secondary School, Tilottama-2,
 							Rupandehi-Nepal.
