--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<div class="right-about">
 						<div class="about-item">
 							<div class="abt-text">
-								<p class="large-text">Project1</p>
+								<p class="large-text">Hostelmandu</p>
 								<p class="small-text">coming <br />soon...</p>
 							</div>
 						</div>
