overall portfolio modified

--- a/index_clean.html
+++ b/index_clean.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Isha Hitang - Software Engineer</title>
-		<meta name="description" content="Isha Hitang - Software Engineering Student at NCIT with 3.84 GPA. Full scholarship recipient, AI4GROWTH winner, hackathon champion. Expert in C/C++, Java, Python, AI/ML. Multiple project experience including heritage detection, fitness trainer AI." />
-		<meta name="keywords" content="Isha Hitang, Software Engineer, NCIT, AI4GROWTH Winner, Hackathon Champion, Full Scholarship, Python, Java, C++, Machine Learning, Nepal, Portfolio" />
+		<meta name="description" content="Isha Hitang - Software Engineering Student at NCIT. Passionate about web development and machine learning. Portfolio showcasing skills in C/C++, Python, HTML, CSS, JavaScript." />
+		<meta name="keywords" content="Isha Hitang, Software Engineer, Web Developer, NCIT, Nepal, Portfolio, Programming, Machine Learning" />
 		<meta name="author" content="Isha Hitang" />
 		<link rel="stylesheet" href="styles/style.css" />
 		<link rel="stylesheet" href="styles/responsive.css" />
@@ -30,13 +30,14 @@
 				<div class="left-header">
 					<div class="h-shape"></div>
 					<div class="image">
-						<img src="img/girl6.jpg" alt="Isha Hitang - Profile Photo" />
+						<img src="img/girl6.jpg" alt="Isha Hitang - Profile Photo" width="100px" height="100px" />
 					</div>
 				</div>
 				<div class="right-header">
 					<h1 class="name">Hi, I'm <span>Isha Hitang</span></h1>
 					<p>
-                    Software Engineering student majoring in AI, Computer Vision, and MLOps. Skilled in C/C++, Java, and Python, with experience in machine learning model and AI solution. Strong analytical skills and a teamwork, growth mindset mentality.
+						Software Engineering Student at Nepal College of Information Technology (NCIT). 
+						Passionate about web development and exploring emerging technologies in Machine Learning.
 					</p>
 					<div class="btn-con">
 						<a href="CV/isha_hitang.pdf" download="Isha_Hitang_CV.pdf" class="main-btn">
@@ -59,15 +60,14 @@
 					<div class="left-about">
 						<h4>About Me</h4>
 						<p>
-							I am Isha Hitang, an enthusiastic Software Engineering student at Nepal College of Information Technology (NCIT), 
-							Imadol, Lalitpur. With strong skills in C/C++, Java, Python, and HTML/CSS/JS, I possess excellent analytical 
-							and mathematical abilities. I enjoy solving logical problems and thrive in collaborative team environments, 
-							prioritizing effective communication.
+							I am Isha Hitang, a dedicated Software Engineering student at Nepal College of Information Technology (NCIT), 
+							Lalitpur. With a strong foundation in programming languages including C/C++, Python, and web technologies, 
+							I am passionate about creating innovative solutions and exploring new technologies.
 						</p>
 						<p>
-							Currently maintaining a GPA of 3.84/4.0 on a full scholarship, I am dedicated to ongoing learning and improvement. 
-							My experience includes software internships, organizing tech events like TEDxNCIT, and winning multiple hackathons. 
-							I am passionate about AI/ML, web development, and creating innovative solutions to real-world problems.
+							Currently focusing on web development and machine learning, I believe in continuous learning and 
+							applying theoretical knowledge to practical projects. My goal is to contribute meaningfully to the 
+							technology sector while growing as a professional developer.
 						</p>
 
 						<div class="abt-btn-icon">
@@ -80,29 +80,29 @@
 					<div class="right-about">
 						<div class="about-item">
 							<div class="abt-text">
-								<p class="large-text">3.84</p>
-								<p class="small-text">GPA<br />out of 4.0</p>
+								<p class="large-text">2021</p>
+								<p class="small-text">Started<br />at NCIT</p>
 							</div>
 						</div>
 
 						<div class="about-item">
 							<div class="abt-text">
-								<p class="large-text">Full</p>
-								<p class="small-text">Scholarship<br />Student</p>
+								<p class="large-text">6+</p>
+								<p class="small-text">Programming<br />Languages</p>
 							</div>
 						</div>
 
 						<div class="about-item">
 							<div class="abt-text">
-								<p class="large-text">Winner</p>
-								<p class="small-text">AI4GROWTH<br />Challenge</p>
+								<p class="large-text">85%</p>
+								<p class="small-text">C/C++<br />Proficiency</p>
 							</div>
 						</div>
 
 						<div class="about-item">
 							<div class="abt-text">
-								<p class="large-text">4+</p>
-								<p class="small-text">Hackathon<br />Awards</p>
+								<p class="large-text">ML</p>
+								<p class="small-text">Machine Learning<br />Enthusiast</p>
 							</div>
 						</div>
 					</div>
@@ -110,6 +110,56 @@
 				<div class="about-stats">
 					<h4 class="stat-titile">Skills</h4>
 					<div class="progress-bars">
+						<div class="progress-bar">
+							<div class="prog-title">HTML</div>
+							<div class="progress-con">
+								<p class="prog-text">80%</p>
+								<div class="progress">
+									<span class="html"></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="progress-bar">
+							<div class="prog-title">SCSS</div>
+							<div class="progress-con">
+								<p class="prog-text">67%</p>
+								<div class="progress">
+									<span class="css"></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="progress-bar">
+							<div class="prog-title">JS</div>
+							<div class="progress-con">
+								<p class="prog-text">60%</p>
+								<div class="progress">
+									<span class="javascript"></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="progress-bar">
+							<div class="prog-title">PHP/MYSQL</div>
+							<div class="progress-con">
+								<p class="prog-text">60%</p>
+								<div class="progress">
+									<span class="php-mysql"></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="progress-bar">
+							<div class="prog-title">PYTHON</div>
+							<div class="progress-con">
+								<p class="prog-text">70%</p>
+								<div class="progress">
+									<span class="python"></span>
+								</div>
+							</div>
+						</div>
+
 						<div class="progress-bar">
 							<div class="prog-title">C/C++</div>
 							<div class="progress-con">
@@ -119,144 +169,51 @@
 								</div>
 							</div>
 						</div>
-
-						<div class="progress-bar">
-							<div class="prog-title">PYTHON</div>
-							<div class="progress-con">
-								<p class="prog-text">80%</p>
-								<div class="progress">
-									<span class="python"></span>
-								</div>
-							</div>
-						</div>
-
-						<div class="progress-bar">
-							<div class="prog-title">JAVA</div>
-							<div class="progress-con">
-								<p class="prog-text">75%</p>
-								<div class="progress">
-									<span class="java"></span>
-								</div>
-							</div>
-						</div>
-
-						<div class="progress-bar">
-							<div class="prog-title">JAVASCRIPT</div>
-							<div class="progress-con">
-								<p class="prog-text">70%</p>
-								<div class="progress">
-									<span class="javascript"></span>
-								</div>
-							</div>
-						</div>
-
-						<div class="progress-bar">
-							<div class="prog-title">SQL/NOSQL</div>
-							<div class="progress-con">
-								<p class="prog-text">70%</p>
-								<div class="progress">
-									<span class="php-mysql"></span>
-								</div>
-							</div>
-						</div>
-
-						<div class="progress-bar">
-							<div class="prog-title">GIT/GITHUB</div>
-							<div class="progress-con">
-								<p class="prog-text">80%</p>
-								<div class="progress">
-									<span class="html"></span>
-								</div>
-							</div>
-						</div>
 					</div>
 				</div>
 				<h4 class="stat-titile">Education & Experience</h4>
 				<div class="timeline">
 					<div class="timeline-item">
 						<div class="timeline-icon">
-							<i class="fas fa-university"></i>
+							<i class="fas fa-graduation-cap"></i>
 						</div>
-						<p class="timeline-duration">2021 - Oct 2025 (Expected)</p>
-						<h5>Nepal College of Information Technology (NCIT) <span> - BE in Software Engineering</span></h5>
-						<p>
-							Full Scholarship recipient with GPA: 3.84/4.0. Relevant courses include DSA, Computer Organization and Architecture, 
-							Computer Graphics, Microprocessor, OOP, AI, Computer Network, Data Warehousing and Data Mining.
-						</p>
-					</div>
-
-					<div class="timeline-item">
-						<div class="timeline-icon">
-							<i class="fas fa-briefcase"></i>
-						</div>
-						<p class="timeline-duration">Nov 2023 - Feb 2024</p>
-						<h5>Software Intern <span> - Itahari, Nepal</span></h5>
-						<p>
-							Collaborated within diverse teams on various Django and Python projects, fostering leadership qualities 
-							and honing communication skills while working on real-world software development projects.
-						</p>
-					</div>
-
-					<div class="timeline-item">
-						<div class="timeline-icon">
-							<i class="fas fa-microphone"></i>
-						</div>
-						<p class="timeline-duration">Dec 2025</p>
-						<h5>Organizer at TEDxNCIT <span> - Speaker and Tech Support</span></h5>
-						<p>
-							Assisted speakers in delivering an excellent experience by providing support with presentations 
-							and technical tools at one of Nepal's premier technology conferences.
-						</p>
-					</div>
-
-					<div class="timeline-item">
-						<div class="timeline-icon">
-							<i class="fas fa-users"></i>
-						</div>
-						<p class="timeline-duration">April 2021 - Present</p>
-						<h5>Volunteer at NOSK <span> - Workshop & Session Organizer</span></h5>
-						<p>
-							Organized and managed various workshops, inspiring thousands of students to engage in technology 
-							and innovation through hands-on learning experiences.
-						</p>
-					</div>
-				</div>
-				<h4 class="stat-titile">Certifications & Recognition</h4>
-				<div class="timeline">
-					<div class="timeline-item">
-						<div class="timeline-icon">
-							<i class="fas fa-certificate"></i>
-						</div>
-						<p class="timeline-duration">2025</p>
-						<h5>Fusemachine AI/ML Fellow <span> - Fellowship Program</span></h5>
-						<p>Selected as an AI/ML Fellow at Fusemachine, one of Nepal's leading AI companies, for advanced training in artificial intelligence and machine learning.</p>
+						<p class="timeline-duration">2011 - 2017</p>
+						<h5>Jana Jyoti Secondary School <span> - Primary & Secondary Education</span></h5>
+						<p>Completed primary and secondary education at Jana Jyoti Secondary School, Tilottama-4, Rupandehi, Nepal.</p>
 					</div>
 
 					<div class="timeline-item">
 						<div class="timeline-icon">
 							<i class="fas fa-graduation-cap"></i>
 						</div>
-						<p class="timeline-duration">Completed</p>
-						<h5>Deep Learning Specialization <span> - Coursera</span></h5>
-						<p>Successfully completed the comprehensive Deep Learning Specialization course on Coursera, gaining expertise in neural networks, CNNs, RNNs, and advanced AI techniques.</p>
+						<p class="timeline-duration">2018 - 2020</p>
+						<h5>Tilottama Higher Secondary School <span> - Higher Secondary (+2)</span></h5>
+						<p>
+							Completed Higher Secondary Education in Science stream at Tilottama Higher Secondary School, 
+							Tilottama-2, Rupandehi, Nepal.
+						</p>
 					</div>
 
 					<div class="timeline-item">
 						<div class="timeline-icon">
-							<i class="fas fa-rocket"></i>
+							<i class="fas fa-university"></i>
 						</div>
-						<p class="timeline-duration">2023</p>
-						<h5>UGC Technopreneurship Course <span> - Grade B+</span></h5>
-						<p>Completed 40-hour UGC Technopreneurship Course with grade B+, developing skills in technology entrepreneurship and innovation.</p>
+						<p class="timeline-duration">2021 - Present</p>
+						<h5>Nepal College of Information Technology (NCIT) <span> - Software Engineering</span></h5>
+						<p>
+							Currently pursuing Bachelor's degree in Software Engineering at NCIT, 
+							Balkumari, Lalitpur, Kathmandu, Nepal. Focusing on software development, 
+							web technologies, and machine learning.
+						</p>
 					</div>
 
 					<div class="timeline-item">
 						<div class="timeline-icon">
-							<i class="fas fa-users"></i>
+							<i class="fas fa-code"></i>
 						</div>
-						<p class="timeline-duration">2023</p>
-						<h5>NASA Space Apps Challenge <span> - Participant</span></h5>
-						<p>Participated in the prestigious NASA International Space Apps Challenge, collaborating on space-related technology solutions.</p>
+						<p class="timeline-duration">Future Goals</p>
+						<h5>Career Development <span> - Software Engineer</span></h5>
+						<p>Seeking opportunities for internships and entry-level positions in software development and web technologies.</p>
 					</div>
 				</div>
 			</section>
@@ -264,43 +221,31 @@
 				<div class="blogs-content">
 					<div class="main-title">
 						<h2>
-							My <span>Achievements</span>
-							<div class="bg-text">Success</div>
+							My <span>Insights</span>
+							<div class="bg-text">Learning</div>
 						</h2>
 					</div>
 					<div class="_blogs">
 						<div class="blog">
-							<img src="img/girl4.jpg" alt="AI4GROWTH Winner" />
+							<img src="img/girl4.jpg" alt="Programming Journey" />
 							<div class="blog-text">
-								<h4>AI4GROWTH Coding Challenge Winner</h4>
+								<h4>My Programming Journey</h4>
 								<p>
-									Developed a mobile application using Flutter and YOLO that allows users to capture images 
-									of heritage sites. Upon detecting a heritage site, it identifies and automatically opens 
-									the corresponding URL for more information. This innovative solution won first place in February 2024.
+									Starting my journey in software engineering has been an incredible learning experience. 
+									From understanding basic programming concepts to exploring complex algorithms, 
+									each step has contributed to my growth as a developer.
 								</p>
 							</div>
 						</div>
 
 						<div class="blog">
-							<img src="img/girl4.jpg" alt="Hackathon Success" />
+							<img src="img/girl4.jpg" alt="Technology Learning" />
 							<div class="blog-text">
-								<h4>Multiple Hackathon Runner-Up</h4>
+								<h4>Exploring Web Technologies</h4>
 								<p>
-									Achieved 1st Runner-Up positions in three major hackathons: Forewarn Disaster Hackathon Nepal 
-									(wildfire management web app), Yantra Softbot Hackathon (Bill Scanner OCR app), and NCIT Hackfest 
-									(child vaccination reminder system using Django and NestJS).
-								</p>
-							</div>
-						</div>
-
-						<div class="blog">
-							<img src="img/girl4.jpg" alt="Current Projects" />
-							<div class="blog-text">
-								<h4>Current AI Projects</h4>
-								<p>
-									Working on cutting-edge projects including "The AI-powered Tuta Absoluta Detection and Alert System" 
-									for NAST Young Scientist program and a "Real-time Audio Feedback Fitness Trainer" using computer vision 
-									and voice synthesis for interactive workout guidance.
+									Web development has opened up endless possibilities for creating interactive and 
+									user-friendly applications. Learning HTML, CSS, JavaScript, and exploring frameworks 
+									continues to be an exciting part of my educational journey.
 								</p>
 							</div>
 						</div>
@@ -328,7 +273,7 @@
 										<i class="fas fa-map-marker-alt"></i>
 										Location
 									</div>
-									<p>: Imadol, Lalitpur, Nepal</p>
+									<p>: Kathmandu, Nepal</p>
 								</div>
 
 								<div class="contacts-item">
@@ -336,7 +281,7 @@
 										<i class="fas fa-graduation-cap"></i>
 										Education
 									</div>
-									<p>: NCIT - Software Engineering (GPA: 3.84/4.0)</p>
+									<p>: Nepal College of Information Technology (NCIT)</p>
 								</div>
 
 								<div class="contacts-item">
@@ -349,23 +294,15 @@
 
 								<div class="contacts-item">
 									<div class="icon">
-										<i class="fas fa-phone"></i>
-										Phone
+										<i class="fas fa-language"></i>
+										Languages
 									</div>
-									<p>: +977 9827454638</p>
-								</div>
-
-								<div class="contacts-item">
-									<div class="icon">
-										<i class="fas fa-globe"></i>
-										Website
-									</div>
-									<p>: ishahitang.com.np</p>
+									<p>: Nepali, English, Hindi</p>
 								</div>
 							</div>
 							<div class="contact-icons">
 								<div class="contact-icon">
-									<a href="https://github.com/iamisha" target="_blank" title="GitHub">
+									<a href="https://www.github.com/iamisha" target="_blank" title="GitHub">
 										<i class="fab fa-github"></i>
 									</a>
 									<a href="mailto:ishahitang09@gmail.com" target="_blank" title="Email">
@@ -373,9 +310,6 @@
 									</a>
 									<a href="https://www.linkedin.com/in/isha-hitang-bb3673252/" target="_blank" title="LinkedIn">
 										<i class="fab fa-linkedin"></i>
-									</a>
-									<a href="https://ishahitang.com.np" target="_blank" title="Website">
-										<i class="fas fa-globe"></i>
 									</a>
 								</div>
 							</div>
