--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     Software Engineering student majoring in AI, Computer Vision, and MLOps. Skilled in C/C++, Java, and Python, with experience in machine learning model and AI solution. Strong analytical skills and a teamwork, growth mindset mentality.
 					</p>
 					<div class="btn-con">
-						<a href="CV/isha_hitang.pdf" download="Isha_Hitang_CV.pdf" class="main-btn">
+						<button id="cvDownloadBtn" class="main-btn">
 							<span class="btn-text">Download CV</span>
 							<span class="btn-icon"><i class="fas fa-download"></i></span>
-						</a>
+						</button>
 					</div>
 				</div>
 			</div>
@@ -71,10 +71,10 @@
 						</p>
 
 						<div class="abt-btn-icon">
-							<a href="CV/isha_hitang.pdf" download="Isha_Hitang_CV.pdf" class="main-btn">
+							<button id="cvDownloadBtn2" class="main-btn">
 								<span class="btn-text">Download CV</span>
 								<span class="btn-icon"><i class="fas fa-download"></i></span>
-							</a>
+							</button>
 						</div>
 					</div>
 					<div class="right-about">
@@ -445,6 +445,33 @@
 		<div class="theme-btn">
 			<i class="fas fa-adjust"></i>
 		</div>
+		
+		<!-- CV Download Modal -->
+		<div id="cvModal" class="cv-modal">
+			<div class="cv-modal-content">
+				<div class="cv-modal-header">
+					<h3>Download CV</h3>
+					<span class="cv-close">&times;</span>
+				</div>
+				<div class="cv-modal-body">
+					<p>Enter your email address to receive Isha's CV directly in your inbox:</p>
+					<form id="cvEmailForm">
+						<div class="cv-input-group">
+							<input type="email" id="cvEmail" placeholder="Your email address" required>
+							<button type="submit" class="cv-submit-btn">
+								<span class="btn-text">Send CV</span>
+								<span class="btn-icon"><i class="fas fa-paper-plane"></i></span>
+							</button>
+						</div>
+						<div class="cv-privacy-note">
+							<small><i class="fas fa-lock"></i> Your email will only be used to send you the CV. We respect your privacy.</small>
+						</div>
+					</form>
+					<div id="cvMessage" class="cv-message"></div>
+				</div>
+			</div>
+		</div>
+		
 		<script src="app.js"></script>
 	</body>
 </html>
