updating my overall portfolio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Isha Hitang - Software Engineer</title>
+		<title>Isha Hitang - AI/Software Engineer</title>
 		<meta name="description" content="Isha Hitang - Software Engineering Student at NCIT with 3.84 GPA. Full scholarship recipient, AI4GROWTH winner, hackathon champion. Expert in C/C++, Java, Python, AI/ML. Multiple project experience including heritage detection, fitness trainer AI." />
 		<meta name="keywords" content="Isha Hitang, Software Engineer, NCIT, AI4GROWTH Winner, Hackathon Champion, Full Scholarship, Python, Java, C++, Machine Learning, Nepal, Portfolio" />
 		<meta name="author" content="Isha Hitang" />
@@ -39,10 +39,10 @@
                     Software Engineering student majoring in AI, Computer Vision, and MLOps. Skilled in C/C++, Java, and Python, with experience in machine learning model and AI solution. Strong analytical skills and a teamwork, growth mindset mentality.
 					</p>
 					<div class="btn-con">
-						<button id="cvDownloadBtn" class="main-btn">
+						<a href="CV/isha_hitang.pdf" download="Isha_Hitang_CV.pdf" class="main-btn">
 							<span class="btn-text">Download CV</span>
 							<span class="btn-icon"><i class="fas fa-download"></i></span>
-						</button>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -71,10 +71,10 @@
 						</p>
 
 						<div class="abt-btn-icon">
-							<button id="cvDownloadBtn2" class="main-btn">
+							<a href="CV/isha_hitang.pdf" download="Isha_Hitang_CV.pdf" class="main-btn">
 								<span class="btn-text">Download CV</span>
 								<span class="btn-icon"><i class="fas fa-download"></i></span>
-							</button>
+							</a>
 						</div>
 					</div>
 					<div class="right-about">
@@ -352,7 +352,7 @@
 										<i class="fas fa-phone"></i>
 										Phone
 									</div>
-									<p>: +977 </p>
+									<p>: +977</p>
 								</div>
 
 								<div class="contacts-item">
@@ -445,33 +445,6 @@
 		<div class="theme-btn">
 			<i class="fas fa-adjust"></i>
 		</div>
-		
-		<!-- CV Download Modal -->
-		<div id="cvModal" class="cv-modal">
-			<div class="cv-modal-content">
-				<div class="cv-modal-header">
-					<h3>Download CV</h3>
-					<span class="cv-close">&times;</span>
-				</div>
-				<div class="cv-modal-body">
-					<p>Enter your email address to receive Isha's CV directly in your inbox:</p>
-					<form id="cvEmailForm">
-						<div class="cv-input-group">
-							<input type="email" id="cvEmail" placeholder="Your email address" required>
-							<button type="submit" class="cv-submit-btn">
-								<span class="btn-text">Send CV</span>
-								<span class="btn-icon"><i class="fas fa-paper-plane"></i></span>
-							</button>
-						</div>
-						<div class="cv-privacy-note">
-							<small><i class="fas fa-lock"></i> Your email will only be used to send you the CV. We respect your privacy.</small>
-						</div>
-					</form>
-					<div id="cvMessage" class="cv-message"></div>
-				</div>
-			</div>
-		</div>
-		
 		<script src="app.js"></script>
 	</body>
 </html>
